--- a/chi2012.tex
+++ b/chi2012.tex
@@ -357,7 +357,7 @@ We recruited participants through adverts posted near the University campus and 
 Participants were offered a small gift certificate from an online retailer in exchange for their time. 
 
 \subsection{Experimental Setup}
-The participants were given a standard desktop PC running MacOS X on a 22" monitor with a standard keyboard and mouse.  During the studies the Excel workbook and DP were initially set to full screen by default.  Each participant was asked to complete two tasks, one A and one B condition.  Each participant was given a maximum of 10 minutes to complete a task, but were told that if they finished earlier they could tell us and move on to the next condition.  In order to select which tasks the participant was given, we used a latin square to permutate the tasks and conditions.  In order to train the user on how to use our interface, they viewed a five-minute DataPalette tutorial video introducing its basic functionality, how to use histograms and maps, and linking instances.
+The participants were given a standard desktop PC running MacOS X on a 22-inch monitor with a standard keyboard and mouse.  During the studies the Excel workbook and DP were initially set to full screen by default.  Each participant was asked to complete two tasks, one A and one B condition.  Each participant was given a maximum of 10 minutes to complete a task, but were told that if they finished earlier they could tell us and move on to the next condition.  In order to select which tasks the participant was given, we used a latin square to permutate the tasks and conditions.  In order to train the user on how to use our interface, they viewed a five-minute DataPalette tutorial video introducing its basic functionality, how to use histograms and maps, and linking instances.
 
 %Each task had an A and B condition.  The A condition, the participant could only use DataPalette to make their decision; and in the B condition the participant was given the choice to using any websites they desired and or workbook in Microsoft Excel containing the data taken from the data sources to make their choice on individual spreadsheets.
 
@@ -395,7 +395,7 @@ During the data collection we collated a spreadsheet summarising the participant
 
 \section{Results}
 
-Twenty-six (26) participants responded, from which we selected the first 20.  Ten participants were female.  All of the participants spoke English, but 12 of them were non-native English speakers.  Seven were non-students; out of the remaining 13, eight studied computer science and 5 studied other subjects.   On average, each study took 40 mins to complete.
+Twenty-six (26) participants responded, from which we selected the first 20.  Ten participants were female.  All of the participants spoke English, but 12 of them were non-native English speakers.  Seven were non-students, comprising University staff and alumni; out of the remaining 13, eight studied computer science and 5 studied other subjects.   On average, each study took 40 mins to complete.
 
 The information in Table \ref{tbl:data} summarises the metrics that were captured of the trials for each participant. We analyse this data next.
 
@@ -506,25 +506,36 @@ Various difficulties were also encountered with use of the websites. There was s
 \end{center}
 \end{figure}
 
-When asked to rate the DP interface, all participants responded that they felt they understood the system, with sixteen (80\%) responding that they understood it \emph{very strongly} (5).  Eighteen (90\%) reported that they thought  DP was \emph{easy}, as well as useful, with one person being neutral on each.  On the statement ``DP is confusing'',  11 strongly disagreed, 6 disagreed, and 3 agreed.  Revisiting the time trials, we discovered that the 3 participants who rated DP as strongly confusing completed the trials statistically significantly slower than the rest of the group. Survey results were visualised in Figure \ref{fig:survey}.
+When asked to rate the DP interface, all participants responded that they felt they understood the system, with sixteen (80\%) responding that they agreed \emph{very strongly}.  Eighteen (90\%) reported that they thought  DP was \emph{easy}, as well as \emph{useful}, with one person being neutral on each.  On the statement ``DP is confusing'',  11 strongly disagreed, 6 disagreed, and 3 agreed.  Revisiting the time trials, we discovered that the 3 participants who rated DP as confusing completed the trials statistically significantly slower than the rest of the group. Survey results were visualised in Figure \ref{fig:survey}.
 
 %+What did people think about it? 
 % Usefulness,Ease,Confusion,etc
 
 In the exit survey, the users noted that they would use an interface like DataPalette in the future, for finding a property to rent/buy, choosing a job and purchasing electronic devices.  However, one participant said that they would not use it for things like deciding on a restaurant because ``it would cheapen the experience'' by removing the element of spontaneity of choice, but would use it for making more important decisions.  Participants had a large number of suggestions for improvement, which In order to improve our solutions the participants suggested making the origin of the information clearer, particularly when combining multiple data sources. The participants also requested the ability to sort instances, as well as explanations of ratings and scoring systems (however some of these are not even transparent on websites). Participants also requested standard features not present in our prototype, such as window management options (specifically, arranging and minimising windows), and the ability to undo operations.
 
-\section{Discussion}
+\section{Discussion and Limitations}
 
-In this section, we first re-visit our study hypotheses introduced in Methodology, using observations from results to support views on each.  We follow this with a discussion of limitations, concerning the design of the interface, the state of the prototype, and the scope and execution of the study, including potential confounding factors, and how this impacts interpretability of results. Finally, we discuss our current and follow-on plans for continuing this line of research.
+In this section, we first re-visit our study hypotheses introduced in Methodology, using observations from results to support views on each.  We follow this with a discussion of limitations regarding the design of the interface, the state of the prototype, and the design and execution of the study.  Finally, we discuss our current and follow-on plans for continuing this line of research.
 
-\subsection{Revisiting the hypotheses: Does DesignPalette facilitate serendipitous data integration?}
+\subsection{Revisiting the hypotheses: Does DataPalette facilitate serendipitous data integration?}
 
-This study tested how 
+We set out to answer three different questions with the DataPalette study. The first concerned whether people understood and could use the system (h1), whether the system enabled people to mix and integrate heterogeneous data (h2), and whether the interface facilitated task completion (h3).  Using real data obtained from typical data sources identified during our prestudy (PS.1), we tested the DP prototype and its integration interaction mechanisms with ``real'' users, who were students, staff and alumni of our University who had varying backgrounds and levels of expertise with computers.
+
+We find substantial support for h1. All participants reported that they understood the tool, and that it was easy to use.   All participants managed to use the interface to view, organize and collate data without running into major roadblocks or confusion, and all effectively were able to compare multiple attributes of heterogeneous data items directly.  More than half of the participants used DP's visualisation features (charting or map -- often several times during the trial -- suggesting that these features were useful and usable as well.  
+
+More convincing of participants' understanding of the system was their feedback, specifically feature requests and desired capabilities.  Several participants requested search functionality, sort and filter functionality, the ability to display multiple properties for a single instance simultaneously, and visualise multiple attributes in a 2 or 3-dimensional visualisation.  Perhaps the most interesting suggestion was also the most common -- the ability to selectively view the provenance of information after instances have been combined.  For example, after his trial, P15 said:
+
+\begin{quote}
+Properties are a tricky issue. Sometimes you don’t care [which data source] a property is from, like ``address'' or ``phone number'' - for these the way it’s done now is fine. But in some cases you need context of where the properties come from in order to know what it really means - like for ``rating'', it makes a big difference whether you’re talking about ``Yelp rating'' or some random reviwer's rating.  You also don’t know what typical ratings are, whether 5 stars are much better than 4, etc.
+\end{quote}
+
+Pertaining to h2, all participants were able to work with multiple sets of heterogeneous data effectively.  With respect to integration specifically, a majority (80\%) of the particiapnts successfully and deliberately integrated data using drag-and-drop SameAs capabilities.  While single-paths were used, multi-path features were not as widely used, only by 4 participants. We believe that participants may not have realized that creating multiple path selections per group was possible, instead assuming it to be similar to the single ``Current path'' state per window of most file managers. 
+
+Ascertaining DP's impact on task performance (h3) was the most difficult to ascertain, given the small sample size of our study and large number of factors influencing each person's performance.  While tasks were completed on average slightly faster than the control interface, these differences were not statistically significant.  However, more data sources seemed to be consulted (we use ``seemed'' carefully because these findings approached significance) during trials with DP over the control interface, which meant that people were looking at more diverse information than the control conditions.  We also found that particiapnts justified their choices with a greater number of factors in DP than the control interface, suggesting that decisions may have been made considering a greater number of factors.  Participants entertained more possibilities for longer in the DP trial, while participants were more prone to eliminate candidates early in the baseline interface.  Finally, people took fewer notes in the DP condition than the baseline, suggesting that there was less need for external cognitive support in DP, which strongly suggests that DP made the task easier to complete.
 
 %% -> discussion and limitations
 \subsection{DataPalette Strengths and Limitations}
 In the A condition, where participants used DataPalette to complete their tasks, they used it to collate the data on-screen, and compare multiple values directly. About half of the observed users actually used the instance combination feature of DataPalette, with the other half able to successfully make decisions without using it. Those who tried to use it were largely successful, and were able to therefore use the global brush-highlighting to simultaneously compare different statistics. Most users instantly opened up all data sources into individual boxes, in order to determine which sources contained specific statistics. The result of this technique is that the users instantly filled their screen, and ran out of space for plots and maps.
-
 
 \subsection{Better Supporting the Task}
 
@@ -547,9 +558,7 @@ In the A condition, where participants used DataPalette to complete their tasks,
 - Organisation of data/screen
 - A vs B, how are they different?
 
-
 % DAN's  qual analysis of processes
-
 In order to complete the tasks, the users followed a number of different processes. The most common process followed
 was {\it collation} of data, either on-screen or on paper. Some users were proficient enough to copy and paste data
 in the supplied spreadsheets from worksheet to worksheet, while others manually typed data value-by-value across worksheets.
