--- a/chi2012.tex
+++ b/chi2012.tex
@@ -523,10 +523,10 @@ We set out to answer three different questions with the DataPalette study. The f
 
 We find substantial support for h1. All participants reported that they understood the tool, and that it was easy to use.   All participants managed to use the interface to view, organize and collate data without running into major roadblocks or confusion, and all effectively were able to compare multiple attributes of heterogeneous data items directly.  More than half of the participants used DP's visualisation features (charting or map -- often several times during the trial -- suggesting that these features were useful and usable as well.  
 
-More convincing of participants' understanding of the system was their feedback, specifically feature requests and desired capabilities.  Several participants requested search functionality, sort and filter functionality, the ability to display multiple properties for a single instance simultaneously, and visualise multiple attributes in a 2 or 3-dimensional visualisation.  Perhaps the most interesting suggestion was also the most common -- the ability to selectively view the provenance of information after instances have been combined.  For example, after his trial, P15 said:
+Additional evidence that participant had a solid understanding of the system was their feedback, specifically feature requests and desired capabilities.  Several participants requested search functionality, sort and filter functionality, the ability to display multiple properties for a single instance simultaneously, and visualise multiple attributes in a 2 or 3-dimensional visualisation.  Perhaps the most interesting suggestion was also the most common -- the ability to selectively view the provenance of information after instances have been combined.  For example, after his trial, P15 said:
 
 \begin{quote}
-Properties are a tricky issue. Sometimes you don’t care [which data source] a property is from, like ``address'' or ``phone number'' - for these the way it’s done now is fine. But in some cases you need context of where the properties come from in order to know what it really means - like for ``rating'', it makes a big difference whether you’re talking about ``Yelp rating'' or some random reviwer's rating.  You also don’t know what typical ratings are, whether 5 stars are much better than 4, etc.
+Properties are tricky. Sometimes you don’t care [which data source] a property is from, like ``address'' or ``phone number'' - for these the way it’s done now is fine. But in some cases you need context of where the properties come from in order to know what it really means - like for ``rating'', it makes a big difference whether you’re talking about ``Yelp rating'' or some random reviewer's rating.  You also don’t know what typical ratings are, whether 5 stars are much better than 4, etc.
 \end{quote}
 
 Pertaining to h2, all participants were able to work with multiple sets of heterogeneous data effectively.  With respect to integration specifically, a majority (80\%) of the particiapnts successfully and deliberately integrated data using drag-and-drop SameAs capabilities.  While single-paths were used, multi-path features were not as widely used, only by 4 participants. We believe that participants may not have realized that creating multiple path selections per group was possible, instead assuming it to be similar to the single ``Current path'' state per window of most file managers. 
@@ -534,8 +534,13 @@ Pertaining to h2, all participants were able to work with multiple sets of heter
 Ascertaining DP's impact on task performance (h3) was the most difficult to ascertain, given the small sample size of our study and large number of factors influencing each person's performance.  While tasks were completed on average slightly faster than the control interface, these differences were not statistically significant.  However, more data sources seemed to be consulted (we use ``seemed'' carefully because these findings approached significance) during trials with DP over the control interface, which meant that people were looking at more diverse information than the control conditions.  We also found that particiapnts justified their choices with a greater number of factors in DP than the control interface, suggesting that decisions may have been made considering a greater number of factors.  Participants entertained more possibilities for longer in the DP trial, while participants were more prone to eliminate candidates early in the baseline interface.  Finally, people took fewer notes in the DP condition than the baseline, suggesting that there was less need for external cognitive support in DP, which strongly suggests that DP made the task easier to complete.
 
 %% -> discussion and limitations
-\subsection{DataPalette Strengths and Limitations}
-In the A condition, where participants used DataPalette to complete their tasks, they used it to collate the data on-screen, and compare multiple values directly. About half of the observed users actually used the instance combination feature of DataPalette, with the other half able to successfully make decisions without using it. Those who tried to use it were largely successful, and were able to therefore use the global brush-highlighting to simultaneously compare different statistics. Most users instantly opened up all data sources into individual boxes, in order to determine which sources contained specific statistics. The result of this technique is that the users instantly filled their screen, and ran out of space for plots and maps.
+\subsection{Design Limitations}
+
+In addition to the aforementioned feature requests, we observed a number of ``pain points'' in the design of the interface that we wish to address in the next iteration.  One such pain point was window layout and screen real estate management; participants were prone to opening up a large number of windows, including maps and charts, and found that the screen filled up very quickly.  When the screen got crowded, two problems were observed: people spent a lot of time arranging and moving windows about, and second, people tended to get lost in windows -- ``what was this again?''
+
+\subsection{More Integration Support}
+
+% In the A condition, where participants used DataPalette to complete their tasks, they used it to collate the data on-screen, and compare multiple values directly. About half of the observed users actually used the instance combination feature of DataPalette, with the other half able to successfully make decisions without using it. Those who tried to use it were largely successful, and were able to therefore use the global brush-highlighting to simultaneously compare different statistics. Most users instantly opened up all data sources into individual boxes, in order to determine which sources contained specific statistics. The result of this technique is that the users instantly filled their screen, and ran out of space for plots and maps.
 
 \subsection{Supporting more sophisticated heterogeneity}
 
